src/objects/Final_Notes_Form__c.object
<CustomObject>
    <description>Holds a record for each clinical note instance of a final delivery appointment</description>
    <fields>
        <fullName>AP_Spread__c</fullName>
        <label>AP Spread</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Final Notes Forms</relationshipLabel>
        <relationshipName>Final_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cantilever_length__c</fullName>
        <label>Cantilever length</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Final Notes Forms</relationshipLabel>
        <relationshipName>Final_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Note_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Note Instance</label>
        <referenceTo>Clinical_Note_Instance__c</referenceTo>
        <relationshipLabel>Final Notes Forms</relationshipLabel>
        <relationshipName>Final_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hygiene_Grade__c</fullName>
        <label>Hygiene Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tissue_Grade__c</fullName>
        <label>Tissue Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Final Notes Form</label>
    <nameField>
        <displayFormat>FNFN-{0000}</displayFormat>
        <label>Final Notes Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Final Notes Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>